Refactor service classes to replace Collectors.toList() with List.toList() for improved readability and performance